@startuml
package Biblio {

    class Estudiante {
        - static int contadorEstudiantes
        - static String CORREO_FORMAT
        --
        - String nombre
        - String curso
        - int nia
        - String email
        - ArrayList<Libro> listaLibro
        --
        + Estudiante(String nombre, String curso, String email)
        + Estudiante(String nombre)
        + static int obtenerTotalEstudiantes()
        + static boolean validarCorreo(String email)
        + void insertarLibro(Libro libro)
        + void borrarLibro(Libro libro)
        + int getNia()
        + void setNia(int nia)
        + String getEmail()
        + void setEmail(String email)
        + String getCurso()
        + void setCurso(String curso)
        + String getNombre()
        + void setNombre(String nombre)
        + ArrayList<Libro> getListaLibros()
        + void setListaLibros(ArrayList<Libro> listaLibro)
        + String toString()
    }

    class Libro {
        - static String SIGLAS_ID
        - static int NUMEROS_ID
        - static int cantidadLibros
        - static int librosDisponibles
        --
        - String titulo
        - String autor
        - String id
        - boolean disponible
        - Estudiante estudiantePrestado
        - Editorial editorial
        --
        + Libro(String titulo, String autor, Editorial editorial)
        - String calcularId()
        + Prestamo prestar(Estudiante estudiante)
        + void devolver(Estudiante estudiante)
        + Editorial getEditorial()
        + void setEditorial(Editorial editorial)
        + boolean estaDisponible()
        + static int getCantidadLibros()
        + static int getLibrosDisponibles()
        + String toString()
        + String getTitulo()
        + void setTitulo(String titulo)
        + String getAutor()
        + void setAutor(String autor)
        + String getId()
        + boolean isDisponible()
        + void setDisponible(boolean disponible)
        + Estudiante getEstudiantePrestado()
        + void setEstudiantePrestado(Estudiante estudiantePrestado)
    }

    class Editorial {
        - String nombre
        - String pais
        - ArrayList<Libro> librosPublicados
        --
        + Editorial(String nombre, String pais)
        + void añadirLibro(Libro libro)
        + void eliminarLibro(Libro libro)
        + String getNombre()
        + void setNombre(String nombre)
        + String getPais()
        + void setPais(String pais)
        + ArrayList<Libro> getLibrosPublicados()
        + void setLibrosPublicados(ArrayList<Libro> librosPublicados)
        + String toString()
    }

    class Prestamo {
        - Estudiante estudiante
        - Libro libro
        - LocalDateTime fecha
        --
        + Prestamo(Estudiante estudiante, Libro libro)
        + Estudiante getEstudiante()
        + void setEstudiante(Estudiante estudiante)
        + LocalDateTime getFecha()
        + void setFecha(LocalDateTime fecha)
        + Libro getLibro()
        + void setLibro(Libro libro)
        + String toString()
    }

    ' Relaciones
    Estudiante "1" -- "*" Libro : listaLibro
    Libro  --  Editorial
    Prestamo o--> Estudiante
    Prestamo o--> Libro
}
@enduml